{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 265,
  "lineage": "7bda5030-8da3-1a6a-8c10-677fde72655b",
  "resources": [
    {
      "module": "module.app_gate",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/backendAddressPools/backend_pool",
                "ip_addresses": [],
                "name": "backend_pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/backendHttpSettingsCollection/http_back",
                "name": "http_back",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/frontendIPConfigurations/frontend_ip",
                "name": "frontend_ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/publicIPAddresses/public_ip_3",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/frontendPorts/Http",
                "name": "Http",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/gatewayIPConfigurations/frontend_ip",
                "name": "frontend_ip",
                "subnet_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1/subnets/frontend_subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/frontendIPConfigurations/frontend_ip",
                "frontend_ip_configuration_name": "frontend_ip",
                "frontend_port_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/frontendPorts/Http",
                "frontend_port_name": "Http",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/httpListeners/Http_listener",
                "name": "Http_listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate",
            "identity": [],
            "location": "uksouth",
            "name": "app_gate",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/backendAddressPools/backend_pool",
                "backend_address_pool_name": "backend_pool",
                "backend_http_settings_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/backendHttpSettingsCollection/http_back",
                "backend_http_settings_name": "http_back",
                "http_listener_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/httpListeners/Http_listener",
                "http_listener_name": "Http_listener",
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/applicationGateways/app_gate/requestRoutingRules/routing_rule",
                "name": "routing_rule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "project_dvwa",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Prevention",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.2"
              }
            ],
            "zones": [
              "2",
              "3"
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_public_ip.public_ip_3",
            "module.network.azurerm_subnet.frontend_subnet",
            "module.network.azurerm_virtual_network.dvwa_network_1",
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.app_gate",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "dvwa_backend_nic_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.app_gate",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "dvwa_backend_nic_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dvwa_nic_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkInterfaces/dvwa_nic_1",
            "internal_domain_name_suffix": "kcewdpdfnd5uzoemyqjvcturef.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dvwa_nic_config_1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/publicIPAddresses/public_ip_1",
                "subnet_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1/subnets/dvwa_subnet_1"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-0D-3A-D6-69-5F",
            "name": "dvwa_nic_1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "project_dvwa",
            "virtual_machine_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Compute/virtualMachines/dvwa_vm_1"
          },
          "dependencies": [
            "module.network.azurerm_public_ip.public_ip_1",
            "module.network.azurerm_subnet.dvwa_subnet_1",
            "module.network.azurerm_virtual_network.dvwa_network_1",
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dvwa_nic_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkInterfaces/dvwa_nic_2",
            "internal_domain_name_suffix": "kcewdpdfnd5uzoemyqjvcturef.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dvwa_nic_config_2",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/publicIPAddresses/public_ip_2",
                "subnet_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1/subnets/dvwa_subnet_2"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-22-48-40-E4-50",
            "name": "dvwa_nic_2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "project_dvwa",
            "virtual_machine_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Compute/virtualMachines/dvwa_vm_2"
          },
          "dependencies": [
            "module.network.azurerm_public_ip.public_ip_2",
            "module.network.azurerm_subnet.dvwa_subnet_2",
            "module.network.azurerm_virtual_network.dvwa_network_1",
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkInterfaces/dvwa_nic_1|/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkSecurityGroups/project_nsg_1",
            "network_interface_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkInterfaces/dvwa_nic_1",
            "network_security_group_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkSecurityGroups/project_nsg_1"
          },
          "dependencies": [
            "module.network.azurerm_network_interface.dvwa_nic_1",
            "module.network.azurerm_network_security_group.project_nsg_1",
            "module.network.azurerm_public_ip.public_ip_1",
            "module.network.azurerm_subnet.dvwa_subnet_1",
            "module.network.azurerm_virtual_network.dvwa_network_1",
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkInterfaces/dvwa_nic_2|/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkSecurityGroups/project_nsg_1",
            "network_interface_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkInterfaces/dvwa_nic_2",
            "network_security_group_id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkSecurityGroups/project_nsg_1"
          },
          "dependencies": [
            "module.network.azurerm_network_interface.dvwa_nic_2",
            "module.network.azurerm_network_security_group.project_nsg_1",
            "module.network.azurerm_public_ip.public_ip_2",
            "module.network.azurerm_subnet.dvwa_subnet_2",
            "module.network.azurerm_virtual_network.dvwa_network_1",
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "project_nsg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/networkSecurityGroups/project_nsg_1",
            "location": "uksouth",
            "name": "project_nsg_1",
            "resource_group_name": "project_dvwa",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "92.237.154.94/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/publicIPAddresses/public_ip_1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.167.240.23",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "public_ip_1",
            "resource_group_name": "project_dvwa",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "2"
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/publicIPAddresses/public_ip_2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.77.68.219",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "public_ip_2",
            "resource_group_name": "project_dvwa",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "3"
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/publicIPAddresses/public_ip_3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.49.141.198",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "public_ip_3",
            "resource_group_name": "project_dvwa",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dvwa_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1/subnets/dvwa_subnet_1",
            "name": "dvwa_subnet_1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "project_dvwa",
            "virtual_network_name": "dvwa_network_1"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.dvwa_network_1",
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dvwa_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1/subnets/dvwa_subnet_2",
            "name": "dvwa_subnet_2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "project_dvwa",
            "virtual_network_name": "dvwa_network_1"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.dvwa_network_1",
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1/subnets/frontend_subnet",
            "name": "frontend_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "project_dvwa",
            "virtual_network_name": "dvwa_network_1"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.dvwa_network_1",
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dvwa_network_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bc618950-6865-4cff-b88c-c413514e9125",
            "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1",
            "location": "uksouth",
            "name": "dvwa_network_1",
            "resource_group_name": "project_dvwa",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1/subnets/dvwa_subnet_1",
                "name": "dvwa_subnet_1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1/subnets/dvwa_subnet_2",
                "name": "dvwa_subnet_2"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/0cd2f854-b0eb-4100-b40d-2d8f27c8ee54/resourceGroups/project_dvwa/providers/Microsoft.Network/virtualNetworks/dvwa_network_1/subnets/frontend_subnet",
                "name": "frontend_subnet"
              }
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.project_dvwa"
          ]
        }
      ]
    }
  ]
}